--- a/reference.bib
+++ b/reference.bib
@@ -799,6 +799,16 @@
     title = {The object constraint language: Precise modeling with uml (addison-wesley object technology series)},
     author = {Warmer, Jos B and Kleppe, Anneke G},
     year = {1998},
-    publisher = {$Addison-Wesley Professional},
+    publisher = {Addison-Wesley Professional},
     address = {Boston, Massachusetts, USA},
+}
+
+@incollection{weske2012business,
+    title = {Business process management architectures},
+    author = {Weske, Mathias},
+    booktitle = {Business Process Management},
+    pages = {333--371},
+    year = {2012},
+    publisher = {Springer},
+    address = {Cham, Switzerland},
 }
