--- a/content/chapter-06-verifikace.tex
+++ b/content/chapter-06-verifikace.tex
@@ -141,7 +141,7 @@ jako \code{true}. Následně je zkonstruován v\'yraz, kterému je předán argu
 
 \section{Př\'{\i}padová studie: e-commerce systém}
 
-Pro praktickou verifikaci a validaci navrženého framwroeku bylo nutné vyzkoušet
+Pro praktickou verifikaci a validaci navrženého frameworku bylo nutné vyzkoušet
 jeho nasazen\'{\i} při v\'yvoji aplikace. Pro tento účel vznikla v
 rámci této práce př\'{\i}padová studie na fiktivn\'{\i}m
 ukázkovém e-commerce systému využ\'{\i}vaj\'{\i}c\'{\i} architekturu orientovanou na služby.
