--- a/diploma-thesis.tex
+++ b/diploma-thesis.tex
@@ -28,11 +28,11 @@
 \usepackage[
 pdftitle={\WorkTitle},              % nastaví v informacích o pdf název
 pdfauthor={\FirstandFamilyName},    % nastaví v informacích o pdf autora
-colorlinks=false,                    % před tiskem doporučujeme nastavit na false, aby odkazy a url nebyly šedé při ČB tisku
+colorlinks=true,                    % před tiskem doporučujeme nastavit na false, aby odkazy a url nebyly šedé při ČB tisku
 breaklinks=true,
-%urlcolor=MidnightBlue,
-%citecolor=MidnightBlue,
-%linkcolor=MidnightBlue,
+urlcolor=ctublue,
+citecolor=ctublue,
+linkcolor=ctublue,
 unicode=true,
 ]
 {hyperref}                          % pro zobrazování "prokliknutelných" linků
