--- a/diploma-thesis.tex
+++ b/diploma-thesis.tex
@@ -160,7 +160,7 @@ utilizing the proposed approach.}
 
 \vspace{\baselineskip}
 
-\noindent{\textbf{Keywords:} Service oriented architecture, business rules, aspect-oriented programming, separation of concerns}
+\noindent{\textbf{Keywords:} Service-oriented architecture, business rules, aspect-oriented programming, separation of concerns}
 
 % Prace v cestine musi krome abstraktu v anglictine obsahovat i
 % abstrakt v cestine.
