--- a/content/chapter-05-implementace.tex
+++ b/content/chapter-05-implementace.tex
@@ -471,7 +471,7 @@ s využitím frameworku Spring Boot\footnote{\url{https://projects.spring.io/spr
 Ten umožňuje využití návrhového vzoru Model-View-Controller, který je vhodný
 pro aplikace s uživatelským rozhraním.
 
-Model systému obsahuje třídu \code{BusinesssContextEditor}, která implementuje
+Model systému obsahuje třídu \code{BusinessContextEditor}, která implementuje
 návrhový vzor Facade~\cite{fowler2002patterns}. Umožňuje načtení byznysových
 kontextů ze vzdálených služeb a jejich následnou úpravu a validaci. K tomu využívá
 prototyp knihovny pro jazyk Java, díky kterému může kontexty přenášet po síti,
