--- a/content/chapter-05-implementace.tex
+++ b/content/chapter-05-implementace.tex
@@ -458,6 +458,8 @@ a v základn\'{\i}m nastaven\'{\i} nen\'{\i} ani př\'{\i}liš efektivn\'{\i} pr
 Proto bylo nutné využ\'{\i}t dodatečné knihovny, jmenovitě
 \textit{Yarn}\footnote{\url{https://yarnpkg.com/en/}}, \textit{Babel}\footnote{\url{https://babeljs.io/}} a
 \textit{Rimraf}\footnote{\url{https://github.com/isaacs/rimraf}}.
+Platforma Node.js neposkytuje nástroje pro práci s XML, pro převod reprezentace byznysových pravidel z \gls{DSL}
+proto byla využita knihovna \code{xmldom}\footnote{\url{https://www.npmjs.com/package/xmldom}}.
 
 \section{Systém pro centráln\'{\i} správu byznys pravidel}\label{sec:central-administration}
 
