--- a/reference.bib
+++ b/reference.bib
@@ -73,7 +73,7 @@
     title = {Automatické generování formulářů v informačních systémech},
     author = {Filip Klimeš},
     year = {2016},
-    publisher = {{ \v { C } } esk { \'e } vysok { \'e } u { \v { c } } en { \'\i } technick { \'e } v Praze. Vypo { \v { c } } etn { \'\i } a informa { \v { c } } n { \'\i } centrum.}
+    publisher = {{\v{C}}esk{\'e} vysok{\'e} u{\v{c}}en{\'\i} technick{\'e} v Praze. Vypo{\v{c}}etn{\'\i} a informa{\v{c}}n{\'\i} centrum.}
 }
 
 @inproceedings{kiczales1997aspect,
@@ -112,7 +112,7 @@
 
 @article{bray1997extensible,
     title = {Extensible markup language (XML).},
-    author = {Bray, Tim and Paoli, Jean and Sperberg-McQueen, C Michael and Maler, Eve and Yergeau, Fran { \c { c } } ois},
+    author = {Bray, Tim and Paoli, Jean and Sperberg-McQueen, C Michael and Maler, Eve and Yergeau, Fran{\c{c}}ois},
     journal = {World Wide Web Journal},
     volume = {2},
     number = {4},
@@ -369,7 +369,7 @@
 
 @article{bos1998cascading,
     title = {Cascading style sheets, level 2 CSS2 specification},
-    author = {Bos, Bert and Lie, H { \aa } kon Wium and Lilley, Chris and Jacobs, Ian},
+    author = {Bos, Bert and Lie, H{\aa}kon Wium and Lilley, Chris and Jacobs, Ian},
     journal = {Available via the World Wide Web at http://www. w3. org/TR/1998/REC-CSS2-19980512},
     pages = {1472--1473},
     year = {1998},
@@ -538,10 +538,10 @@
 }
 
 @book{melichar2003jazyky,
-    title = {Jazyky a p { \v { r } } eklady},
-    author = {Melichar, Bo { \v { r } } ivoj},
+    title = {Jazyky a překlady},
+    author = {Melichar, Bořivoj},
     year = {2003},
-    publisher = {Vydavatelstv { \'\i } { \v { C } } VUT},
+    publisher = {Vydavatelství ČVUT},
     address = {Praha, Česká republika},
 }
 
@@ -573,7 +573,7 @@
 
 @incollection{czarnecki2000generative,
     title = {Generative programming and active libraries},
-    author = {Czarnecki, Krzysztof and Eisenecker, Ulrich and Gl { \"u } ck, Robert and Vandevoorde, David and Veldhuizen, Todd},
+    author = {Czarnecki, Krzysztof and Eisenecker, Ulrich and Gl{\"u}ck, Robert and Vandevoorde, David and Veldhuizen, Todd},
     booktitle = {Generic Programming},
     pages = {25--39},
     year = {2000},
@@ -682,7 +682,7 @@
 
 @incollection{boyer2011ibm,
     title = {IBM websphere ilog jrules},
-    author = {Boyer, Mr J { \'e } r { \^o } me and Mili, Hafedh},
+    author = {Boyer, Mr J{\'e}r{\^o}me and Mili, Hafedh},
     booktitle = {Agile business rule development},
     pages = {215--242},
     year = {2011},
